# food_manager

./: .gitignore  README  __main__.py  db.json  main.py  module_names.txt  pyproject.toml  pytest.ini
base/models/: FoodProductDbModel.py  FoodProductModel.py  __init__.py
base/settings/: SettingsTaskScraperBaseManager.py
core/entities/: FoodProduct.py  __init__.py
core/interfaces/: ProductExtractor.py  ProductExtractorFactory.py  ProductRequest.py  ProductRequestFactory.py  Scraper.py  ScraperFactory.py  TaskScraperManager.py  __init__.py
core/models/: FoodProductDbModel.py  FoodProductModel.py
core/settings/: SettingsSbermarket.py  SettingsTaskScraperBaseManager.py  SettingsTaskScraperManager.py  __init__.py
food_manager/utils/: initialization_plugins.py  startup_utils.py
impl/: build_app.py
impl/extractor/: ExtractorProductFactoryStoreFactoryImpl.py  ProductExtractorFactoryImpl.py  ProductExtractorFactoryStoreFactoryImpl.py  __init__.py
impl/extractors/: ProductExtractorAuchan.py  ProductExtractorSbermarket.py  __init__.py
impl/request/: ProductRequestFactoryImpl.py  ProductRequestFactoryStoreFactoryImpl.py  __init__.py
impl/requests/: ProductRequestAiohttp.py  ProductRequestHtmlRequest.py  ProductRequestPyppeteer.py  ProductRequestSelenium.py  __init__.py
impl/scraper/: ProductScraperFactoryImpl.py  ProductScraperFactoryStoreFactoryImpl.py  __init__.py
impl/scrapers/: ScraperAuchan.py  ScraperSbermarket.py  __init__.py
impl/tasks_scraper_manager/: TaskScraperManagerFactoryImpl.py  __init__.py  (+3 more)
tests/: pytest.ini
utils/: startup_utils.py
(+238 files in other folders)
