[tool.poetry]
name = "food-manager"
version = "0.1.0"
description = ""
authors = ["anton nenashev <psihonort@gmail.com>"]
readme = "README.md"
packages = [{include = "food_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pytest = "^7.1.3"
tinydb = "^4.7.0"
aiologger = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
